<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAboutMe"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:src="@drawable/me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <TextView
        android:id="@+id/tvAboutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/myname"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAboutMe" />

    <TextView
        android:id="@+id/tvAboutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tvAboutName"
        app:layout_constraintStart_toStartOf="@id/tvAboutName"
        app:layout_constraintTop_toBottomOf="@id/tvAboutName" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/back_to_main"
        app:layout_constraintEnd_toEndOf="@+id/tvAboutEmail"
        app:layout_constraintStart_toStartOf="@+id/tvAboutEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>